--- a/algorithms-common/pom.xml
+++ b/algorithms-common/pom.xml
@@ -2,8 +2,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.jeffreyji.algorithms</groupId>
-		<artifactId>algorithms</artifactId>
+		<groupId>org.jeffreyji.common</groupId>
+		<artifactId>common</artifactId>
 		<version>1.0</version>
 	</parent>
 	<artifactId>algorithms-common</artifactId>
