--- a/algorithms-common/pom.xml
+++ b/algorithms-common/pom.xml
@@ -14,5 +14,10 @@
 			<artifactId>ik-analyzer</artifactId>
 			<version>3.2.8</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+		</dependency>
 	</dependencies>
 </project>
