--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,31 @@
+target/
+!.mvn/wrapper/maven-wrapper.jar
+disconf/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
 .project
 .settings
+.springBeans
 
-algorithms-common/target
-algorithms-common/.classpath
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
-concurrency-common/target
-concurrency-common/.classpath
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+### Mac OS ### 
+.DS_Store
+
+*/*.iml
+.java-version
