--- a/algorithms-common/pom.xml
+++ b/algorithms-common/pom.xml
@@ -9,11 +9,11 @@
 	<artifactId>algorithms-common</artifactId>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.wltea.ik-analyzer</groupId>
-			<artifactId>ik-analyzer</artifactId>
-			<version>3.2.8</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.wltea.ik-analyzer</groupId>-->
+			<!--<artifactId>ik-analyzer</artifactId>-->
+			<!--<version>3.2.8</version>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
